--- a/global.css
+++ b/global.css
@@ -1,5 +1,5 @@
 * {
-  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: var(--white);
 }
 
@@ -13,7 +13,6 @@
   --faded-white: #FAFAFC;
   --dark-grey: #E5E5E7;
   --yellow: #EFB05A;
-
   --sidebar-width: 300px;
 } 
 
@@ -29,4 +28,14 @@ a {
 
 #root{
   scroll-behavior: smooth;
+}
+
+body {
+  align-items: center;
+  background: #0D0C1D;
+  color: #EFFFFA;
+}
+
+*, *::after, *::before {
+  box-sizing: border-box;
 }
